# cpp-ai-algorithms

./: .gitignore  CMakeLists.txt  README.md
include/: astar_search.h  neural_network.h
src/: astar_search.cpp  main.cpp  neural_network.cpp
